--- a/init.org
+++ b/init.org
@@ -384,6 +384,25 @@ Tangle
     :config
     (pdf-tools-install))
 #+end_src
+** org-brain
+#+begin_src emacs-lisp
+  (use-package org-brain :ensure t
+    :init
+    (setq org-brain-path "~/Dropbox/brain")
+    ;; For Evil users
+    (with-eval-after-load 'evil
+      (evil-set-initial-state 'org-brain-visualize-mode 'emacs))
+    :config
+    (setq org-id-track-globally t)
+    (setq org-id-locations-file "~/.emacs.d/.org-id-locations")
+    (push '("b" "Brain" plain (function org-brain-goto-end)
+            "* %i%?" :empty-lines 1)
+          org-capture-templates)
+    (setq org-brain-visualize-default-choices 'all)
+    (setq org-brain-title-max-length 12)
+    (setq org-brain-include-file-entries nil
+          org-brain-file-entries-use-title nil))
+#+end_src
 * Orgmode setup
 ** General setup
 #+BEGIN_SRC emacs-lisp :tangle yes
@@ -497,7 +516,8 @@ Tangle
                          '((:discard (:tag "REFILE"))
                            (:name none
                                    :todo "STRT"
-                                   :order 1)))))
+                                   :order 1)
+                           (:discard (:anything t))))))
 
             (alltodo "" ((org-agenda-overriding-header "Active Project")
                          (org-super-agenda-groups
@@ -539,7 +559,8 @@ Tangle
                                    :discard (:children nil)
                                    :order 1)
                             (:name none
-                                   :children todo)))))
+                                   :children todo)
+                            (:discard (:anything t))))))
             ))
           ("b" "books" alltodo "" ((org-agenda-overriding-header "Books to read")
                                 (org-super-agenda-groups
