--- a/init.org
+++ b/init.org
@@ -485,19 +485,6 @@ Tangle
     (setq org-brain-include-file-entries nil
           org-brain-file-entries-use-title nil))
 #+end_src
-** Org-pdftools
-#+begin_src emacs-lisp
-  (use-package org-pdftools
-    :straight (org-pdftools :type git :host github :repo "fuxialexander/org-pdftools")
-    :config 
-    (with-eval-after-load 'org
-      (org-link-set-parameters "pdftools"
-                               :follow #'org-pdftools-open
-                               :complete #'org-pdftools-complete-link
-                               :store #'org-pdftools-store-link
-                               :export #'org-pdftools-export)
-      (add-hook 'org-store-link-functions 'org-pdftools-store-link)))
-#+end_src
 ** dired+
 #+begin_src emacs-lisp
   (use-package dired+)
@@ -722,10 +709,12 @@ Tangle
            (irony-mode-hook . irony-cdb-autosetup-compile-options)))
 #+end_src
 ** vterm
-#+begin_src emacs-lisp :tangle no
-  (use-package vterm)
+#+begin_src emacs-lisp :tangle yes
+  (use-package vterm
+    :if (my-system-type-is-gnu))
   (use-package vterm-toggle
     :straight (vterm-toggle :type git :host github :repo "jixiuf/vterm-toggle")
+    :if (my-system-type-is-gnu)
     :config
     (setq vterm-toggle-fullscreen-p nil)
     (add-to-list 'display-buffer-alist
