--- a/init.org
+++ b/init.org
@@ -128,7 +128,7 @@ Tangle
   (use-package hyperbole)
 #+end_src
 ** Org-roam
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
   (use-package org-roam
         :after org
         :hook 
@@ -389,7 +389,6 @@ Tangle
    ("g" nil))
 #+end_src
 ** Undotree
-
 #+begin_src emacs-lisp
   (use-package undo-tree
     :config
@@ -645,8 +644,7 @@ Tangle
   (use-package doom-themes
     :config
     (setq doom-themes-enable-bold t
-          doom-themes-enable-italic t)
-    (load-theme 'doom-one t))
+          doom-themes-enable-italic t))
 #+end_src
 ** kaolin themes
 #+begin_src emacs-lisp :tangle no
@@ -663,7 +661,27 @@ Tangle
     (sml/setup)
     (add-to-list 'sml/replacer-regexp-list '("^~/Dropbox/" ":DBox:")))
 #+end_src
+** Material theme
+#+begin_src emacs-lisp
+  (use-package flatland-theme)
+  (load-theme 'flatland t)
+
+#+end_src
 * Programming setup
+** Projectile
+#+begin_src emacs-lisp
+  (use-package projectile
+    :config
+    (projectile-mode 1))
+#+end_src
+** Emmet-mode
+#+begin_src emacs-lisp
+  (use-package emmet-mode
+    :config
+    (add-hook 'sgml-mode-hook 'emmet-mode)
+    (add-hook 'css-mode-hook 'emmet-mode)
+    (setq emmet-self-closing-tag-style " /"))
+#+end_src
 ** Webmode
 #+begin_src emacs-lisp
   (use-package web-mode
@@ -681,6 +699,10 @@ Tangle
     :config
     (elpy-enable))
 #+END_SRC
+** Blacken
+#+begin_src emacs-lisp
+  (use-package blacken)
+#+end_src
 ** Python debugging with realgud
 #+begin_src emacs-lisp :tangle yes
   (use-package realgud)
@@ -739,11 +761,6 @@ Tangle
 ** Install general
 #+begin_src emacs-lisp
   (use-package general)
-#+end_src
-** Unbind keybindings
-#+begin_src emacs-lisp
-  (general-unbind
-    "C-/")
 #+end_src
 ** For windows movement
 #+BEGIN_SRC emacs-lisp :tangle yes
@@ -814,8 +831,8 @@ Tangle
    :keymaps 'global
    :prefix "C-c"
    "o" 'org-agenda
+   "p" 'projectile-command-map
    "c" 'org-capture
-   "n" '((lambda() (interactive)(org-capture nil "n")) :which-key "Taking notes")
    "f" 'hai/helm-org-rifle-archives
    "w" 'hydra-org-clock/body
    "s" 'hydra-smartparens/body
@@ -830,9 +847,10 @@ Tangle
 #+begin_src emacs-lisp
   (general-define-key
    :keymaps 'global
+   "H-k" 'copy-line
    "H-RET" 'action-key
-   "H-," 'my-pop-local-mark-ring
-   "H-." 'unpop-to-mark-command
+   "H-." 'my-pop-local-mark-ring
+   "H-," 'unpop-to-mark-command
    "H-<" 'previous-buffer
    "H->" 'next-buffer
    "M-<SPC>" 'set-mark-command
@@ -1069,4 +1087,27 @@ Skip project and sub-project tasks, habits, and loose non-project tasks."
       (org-insert-link nil (car (car org-stored-links)) "Link to Task")
       )    
     )
+#+end_src
+** New command
+#+begin_src emacs-lisp
+    (defun copy-line (arg)
+      "Copy lines (as many as prefix argument) in the kill ring.
+        Ease of use features:
+        - Move to start of next line.
+        - Appends the copy on sequential calls.
+        - Use newline as last char even on the last line of the buffer.
+        - If region is active, copy its lines."
+      (interactive "p")
+      (let ((beg (line-beginning-position))
+            (end (line-end-position arg)))
+        (when mark-active
+          (if (> (point) (mark))
+              (setq beg (save-excursion (goto-char (mark)) (line-beginning-position)))
+            (setq end (save-excursion (goto-char (mark)) (line-end-position)))))
+        (if (eq last-command 'copy-line)
+            (kill-append (buffer-substring beg end) (< end beg))
+          (kill-ring-save beg end)))
+      (kill-append "\n" nil)
+      (beginning-of-line (or (and arg (1+ arg)) 2))
+      (if (and arg (not (= 1 arg))) (message "%d lines copied" arg)))
 #+end_src
