--- a/init.org
+++ b/init.org
@@ -7,7 +7,7 @@
 #+END_SRC
 
 
-* Initialize the configuration
+* Initialize the configurationk
 ** Tangle & byte compile
 
 Tangle and byte compile
@@ -219,89 +219,17 @@ Tangle
 #+begin_src emacs-lisp
   (use-package smartparens
     :config
-    (smartparens-global-mode)
-    (require 'smartparens-config))
+    (smartparens-global-mode))
 #+end_src
-
+** Undo-fu
+#+begin_src emacs-lisp
+  (use-package undo-fu)
+#+end_src
 ** hydra
 #+begin_src emacs-lisp
   (use-package hydra)
 #+end_src
 *** Some useful hydra
-**** Orgclock timer
-#+begin_src emacs-lisp :tangle yes
-  (defhydra hydra-org-clock (:color blue :hint nil)
-     "
-  Clock   In/out^     ^Edit^   ^Summary     (_?_)
-  -----------------------------------------
-          _i_n         _e_dit   _g_oto entry
-          _c_ontinue   _q_uit   _d_isplay
-          _o_ut        ^ ^      _r_eport
-        "
-     ("i" org-clock-in)
-     ("o" org-clock-out)
-     ("c" org-clock-in-last)
-     ("e" org-clock-modify-effort-estimate)
-     ("q" org-clock-cancel)
-     ("g" org-clock-goto)
-     ("d" org-clock-display)
-     ("r" org-clock-report)
-     ("?" (org-info "Clocking commands")))
-#+end_src
-**** Smartparens
-#+begin_src emacs-lisp
-  (defhydra hydra-smartparens (:hint nil)
-    "
-   Moving^^^^                       Slurp & Barf^^   Wrapping^^            Sexp juggling^^^^               Destructive
-  ------------------------------------------------------------------------------------------------------------------------
-   [_a_] beginning  [_n_] down      [_h_] bw slurp   [_R_]   rewrap        [_S_] split   [_t_] transpose   [_c_] change inner  [_w_] copy
-   [_e_] end        [_N_] bw down   [_H_] bw barf    [_u_]   unwrap        [_s_] splice  [_A_] absorb      [_C_] change outer
-   [_f_] forward    [_p_] up        [_l_] slurp      [_U_]   bw unwrap     [_r_] raise   [_E_] emit        [_k_] kill          [_g_] quit
-   [_b_] backward   [_P_] bw up     [_L_] barf       [_(__{__[_] wrap (){}[]   [_j_] join    [_o_] convolute   [_K_] bw kill       [_q_] quit"
-    ;; Moving
-    ("a" sp-beginning-of-sexp)
-    ("e" sp-end-of-sexp)
-    ("f" sp-forward-sexp)
-    ("b" sp-backward-sexp)
-    ("n" sp-down-sexp)
-    ("N" sp-backward-down-sexp)
-    ("p" sp-up-sexp)
-    ("P" sp-backward-up-sexp)
-
-    ;; Slurping & barfing
-    ("h" sp-backward-slurp-sexp)
-    ("H" sp-backward-barf-sexp)
-    ("l" sp-forward-slurp-sexp)
-    ("L" sp-forward-barf-sexp)
-
-    ;; Wrapping
-    ("R" sp-rewrap-sexp)
-    ("u" sp-unwrap-sexp)
-    ("U" sp-backward-unwrap-sexp)
-    ("(" sp-wrap-round)
-    ("{" sp-wrap-curly)
-    ("[" sp-wrap-square)
-
-    ;; Sexp juggling
-    ("S" sp-split-sexp)
-    ("s" sp-splice-sexp)
-    ("r" sp-raise-sexp)
-    ("j" sp-join-sexp)
-    ("t" sp-transpose-sexp)
-    ("A" sp-absorb-sexp)
-    ("E" sp-emit-sexp)
-    ("o" sp-convolute-sexp)
-
-    ;; Destructive editing
-    ("c" sp-change-inner :exit t)
-    ("C" sp-change-enclosing :exit t)
-    ("k" sp-kill-sexp)
-    ("K" sp-backward-kill-sexp)
-    ("w" sp-copy-sexp)
-
-    ("q" nil)
-    ("g" nil))
-#+end_src
 **** Lsp mode
 #+begin_src emacs-lisp :tangle yes
   (defhydra hydra-lsp (:exit t :hint nil)
@@ -328,175 +256,11 @@ Tangle
     ("M-r" lsp-restart-workspace)
     ("S" lsp-shutdown-workspace))
 #+end_src
-**** Apropos commands
-#+begin_src emacs-lisp :tangle yes
-  (defhydra hydra-apropos (:color blue)
-    "Apropos"
-    ("a" apropos "apropos")
-    ("c" apropos-command "cmd")
-    ("d" apropos-documentation "doc")
-    ("e" apropos-value "val")
-    ("l" apropos-library "lib")
-    ("o" apropos-user-option "option")
-    ("u" apropos-user-option "option")
-    ("v" apropos-variable "var")
-    ("i" info-apropos "info")
-    ("t" tags-apropos "tags")
-    ("z" hydra-customize-apropos/body "customize"))
-#+end_src
-**** Transposing
-#+begin_src emacs-lisp :tangle yes
-  (defhydra hydra-transpose (:color red)
-  "Transpose"
-   ("c" transpose-chars "characters")
-   ("w" transpose-words "words")
-   ("o" org-transpose-words "Org mode words")
-   ("l" transpose-lines "lines")
-   ("s" transpose-sentences "sentences")
-   ("e" org-transpose-elements "Org mode elements")
-   ("p" transpose-paragraphs "paragraphs")
-   ("t" org-table-transpose-table-at-point "Org mode table")
-   ("q" nil "cancel" :blue color))
-#+end_src
-**** Rectangle operation
-#+begin_src emacs-lisp :tangle yes
-  (defhydra hydra-rectangle (:body-pre (rectangle-mark-mode 1)
-                                       :color pink
-                                       :hint nil
-                                       :post (deactivate-mark))
-    "
-    ^_u_^       _w_ copy      _o_pen       _N_umber-lines            |\\     -,,,--,,_
-  _n_   _i_     _y_ank        _t_ype       _e_xchange-point          /,`.-'`'   ..  \-;;,_
-    ^_e_^       _d_ kill      _c_lear      _r_eset-region-mark      |,4-  ) )_   .;.(  `'-'
-  ^^^^          _U_ndo        _g_ quit     ^ ^                     '---''(./..)-'(_\_)
-  "
-   ("u" rectangle-previous-line)
-   ("e" rectangle-next-line)
-   ("n" rectangle-backward-char)
-   ("i" rectangle-forward-char)
-   ("d" kill-rectangle)                    ;; C-x r k
-   ("y" yank-rectangle)                    ;; C-x r y
-   ("w" copy-rectangle-as-kill)            ;; C-x r M-w
-   ("o" open-rectangle)                    ;; C-x r o
-   ("t" string-rectangle)                  ;; C-x r t
-   ("c" clear-rectangle)                   ;; C-x r c
-   ("e" rectangle-exchange-point-and-mark) ;; C-x C-x
-   ("N" rectangle-number-lines)            ;; C-x r N
-   ("r" (if (region-active-p)
-            (deactivate-mark)
-          (rectangle-mark-mode 1)))
-   ("U" undo nil)
-   ("g" nil))
-#+end_src
-** Undotree
-#+begin_src emacs-lisp
-  (use-package undo-tree
-    :config
-    (global-undo-tree-mode))
-#+end_src
-** Deadgrep
-#+begin_src emacs-lisp 
-  (use-package deadgrep)
-#+end_src
-** Org-helm-rifle
-#+begin_src emacs-lisp :tangle yes
-  (use-package helm-org-rifle)
-  (defun hai/helm-org-rifle-archives ()
-    "Rifle through Archives folder"
-    (interactive)
-    (helm-org-rifle-directories "~/Dropbox/orggtd/"))
-#+end_src
-** Org-webtools
-#+begin_src emacs-lisp
-  (use-package org-web-tools)
-#+end_src
-** Elfeed
-*** Elfeed itself
-  #+begin_src emacs-lisp :tangle yes
-    (use-package elfeed)
-  #+end_src
-*** Elfeed-org
-#+begin_src emacs-lisp
-  (use-package elfeed-org
-    :config
-    (elfeed-org)
-    (setq rmh-elfeed-org-files (list "~/.emacs.d/elfeed.org")))
-#+end_src
-** Yasnippet
-#+begin_src emacs-lisp
-  (use-package yasnippet
-    :config
-    (yas-global-mode 1)
-    (setq yas-snippet-dirs
-          '("~/.emacs.d/snippets/")))
-#+end_src
-** org-protocol-capture-html
-#+begin_src emacs-lisp
-  (require 'org-protocol)
-  (use-package org-protocol-capture-html
-    :straight (org-protocol-capture-html :type git :host github :repo "alphapapa/org-protocol-capture-html"))
-#+end_src
-** pdf-tools
-#+begin_src emacs-lisp
-  (use-package pdf-tools
-    :config
-    (pdf-tools-install))
-#+end_src
-** evil-mode
-#+begin_src emacs-lisp :tangle no
-  (use-package evil
-    :config
-    (evil-mode 1)
-    (evil-set-initial-state 'org-agenda 'emacs)
-    (evil-set-initial-state 'dired-mode 'emacs))
-#+end_src
-** Evil support packages
-#+begin_src emacs-lisp :tangle no
-  (use-package evil-anzu
-    :after evil
-    :init
-    (global-anzu-mode t)
-    (setq anzu-search-threshold 1000
-          anzu-cons-mode-line-p nil))
-  (use-package evil-numbers
-    :after evil
-    :config
-    (define-key evil-normal-state-map (kbd "C-a") 'evil-numbers/inc-at-pt)
-    (define-key evil-normal-state-map (kbd "C-e") 'evil-numbers/dec-at-pt))
-  (use-package evil-surround
-    :after evil)
-  (use-package evil-matchit
-    :after evil)
-  (use-package evil-nerd-commenter
-    :after evil)
-  (use-package evil-lisp-state
-    :after evil)
-  (use-package evil-lion
-    :config
-    (evil-lion-mode))
-#+end_src
-** org-brain
-#+begin_src emacs-lisp
-  (use-package org-brain :ensure t
-    :init
-    (setq org-brain-path "~/Dropbox/brain")
-    :config
-    (setq org-id-track-globally t)
-    (setq org-id-locations-file "~/Dropbox/brain/.org-id-locations")
-    (setq org-brain-visualize-default-choices 'all)
-    (setq org-brain-title-max-length 12)
-    (setq org-brain-include-file-entries nil
-          org-brain-file-entries-use-title nil))
-#+end_src
-** dired+
-#+begin_src emacs-lisp
-  (use-package dired+)
-  (use-package w32-browser)
-#+end_src
 * Orgmode setup
 ** General setup
 #+BEGIN_SRC emacs-lisp :tangle yes
   (add-hook 'org-mode-hook 'org-indent-mode)
+  (add-hook 'org-mode-hook #'visual-line-mode)
   (setq org-refile-use-outline-path 'file)
   (setq org-use-fast-todo-selection t)
   (setq org-treat-S-cursor-todo-selection-as-state-change nil)
@@ -686,7 +450,10 @@ Tangle
 #+begin_src emacs-lisp
   (use-package web-mode
     :config
-    (add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode)))
+    (add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode))
+    (setq web-mode-engines-alist '(("django" . "\\.html\\'")))
+    (setq web-mode-enable-auto-pairing nil))
+
 #+end_src
 ** Magit - the king of git
 #+begin_src emacs-lisp :tangle yes
@@ -834,11 +601,7 @@ Tangle
    "p" 'projectile-command-map
    "c" 'org-capture
    "f" 'hai/helm-org-rifle-archives
-   "w" 'hydra-org-clock/body
-   "s" 'hydra-smartparens/body
    "l" 'hydra-lsp/body
-   "a" 'hydra-apropos/body
-   "t" 'hydra-transpose/body
    "e" 'elfeed
    "r" 'hai/helm-org-rifle-archives
    )
@@ -848,27 +611,33 @@ Tangle
   (general-define-key
    :keymaps 'global
    "H-k" 'copy-line
+   "C-z" 'undo-fu-only-undo
+   "C-S-z" 'undo-fu-only-redo
    "H-RET" 'action-key
    "H-." 'my-pop-local-mark-ring
    "H-," 'unpop-to-mark-command
    "H-<" 'previous-buffer
    "H->" 'next-buffer
    "M-<SPC>" 'set-mark-command
-   "C-z" 'undo-tree-undo
-   "C-S-z" 'undo-tree-redo
    "C-s" 'swiper-isearch
    "H-t" 'vterm-toggle
    "H-s" 'deadgrep
-  )
+   )
+
 #+end_src
 ** Smartparens
 #+begin_src emacs-lisp
   (general-define-key
    :keymap 'global
-   "C-M-'" 'negative-argument)
-  (sp-pair "(" ")" :wrap "H-(")
-  (sp-pair "[" "]" :wrap "H-[")
-  (sp-pair "{" "}" :wrap "H-{")
+   "C-M-'" 'negative-argument
+   "M-<DEL>" 'sp-unwrap-sexp)
+  (sp-pair "(" ")" :wrap "C-(")
+  (sp-pair "[" "]" :wrap "C-]")
+  (sp-pair "{" "}" :wrap "C-{")
+  (sp-pair "$" "$" :wrap "C-$")
+  (sp-pair "%" "%" :wrap "C-%")
+  (sp-pair "<" ">" :wrap "C->")
+
 #+end_src
 ** Leader keybindings
 *** Define leader key
